kubernetes/intro/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
spec:
  containers:
  - name: curl-container
    image: curlimages/curl:latest
    command: [ "sh", "-c", "tail -f /dev/null" ]
