kubernetes/intro/configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configmap-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configmap-demo
  template:
    metadata:
      labels:
        app: configmap-demo
    spec:
      containers:
      - name: web
        image: nginx
        volumeMounts:
        - name: config-volume
          mountPath: /app/configfile.ini
          subPath: configfile.ini
      volumes:
      - name: config-volume
        configMap:
          name: my-config
