kubernetes/intro/pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvc
  template:
    metadata:
      labels:
        app: pvc
    spec:
      containers:
      - name: web
        image: nginx
        volumeMounts:
        - name: mystorage
          mountPath: /data
      volumes:
      - name: mystorage
        persistentVolumeClaim:
          claimName: mypvc
